# asar-rs

./: .gitignore  Cargo.toml  README.md
crates/asar/: Cargo.toml
crates/asar/include/: asar.h
crates/asar/src/: asar.rs  crawlfs.rs  disk.rs  error.rs  ffi.rs  filesystem.rs  integrity.rs  lib.rs  main.rs  node.rs
crates/asar/tests/: CMakeLists.txt  api.rs  main.c  util.rs
crates/asar/tests/expected/: packthis-link-unix.asar  packthis-link-win.asar
crates/asar/tests/input/packthis-link/dir2/: file2.txt
crates/pickle/: Cargo.toml
crates/pickle/src/: lib.rs
