[package]
name = "asar_rs"
version = "0.1.0"
authors = ["Toyo Li"]
edition = "2021"
description = "Creating Electron app packages"
homepage = "https://github.com/toyobayashi/asar-rs"
repository = "https://github.com/toyobayashi/asar-rs"
license = "MIT"
exclude = [
  "/tests"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "asar"
path = "src/main.rs"

[lib]
name = "asar_rs"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
chromium_pickle = { path = "../pickle", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pathdiff = "0.1"
path-absolutize = "3.1"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
tempfile = "3.7"
anyhow = "1.0"
clap = { version = "4.3", features = ["cargo"]}

[dev-dependencies]
dircmp = "0.2"
